Bug 351624 - Inconsistent display/use of app icons in panel/launcher & TaskManager; confusing visual cues
Summary: Inconsistent display/use of app icons in panel/launcher & TaskManager; confus...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
: 352157 352707 355401 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-08-22 18:43 UTC by pgnet
Modified: 2016-04-27 00:30 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
kde: VisualDesign+


Attachments
screenshot of inconsistent icon usage (79.10 KB, image/png)
2015-08-22 18:45 UTC, pgnet
Details
screenshot of wrong Thunderbird icon even at large scale (29.60 KB, image/png)
2015-08-28 18:39 UTC, pgnet
Details
Grouped dolphin items don't show folder names (15.43 KB, image/png)
2015-09-14 08:16 UTC, d_tassos
Details
Grouped chrome items don't show window names (17.71 KB, image/png)
2015-09-14 08:20 UTC, d_tassos
Details
wrong icon for intellij idea and mysql workbench (26.42 KB, image/png)
2015-09-15 07:40 UTC, Roberto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pgnet 2015-08-22 18:43:31 UTC
with

 plasma5-desktop-5.3.91git~20150822T021537~a4f7192-137.1.x86_64
 plasma-framework-5.14.0git.20150821T234630~cc885eb-3.1.x86_64
 plasma5-workspace-5.3.91git~20150822T000119~81c8096-156.1.x86_64

Icons belonging to apps installed / defined in KDE (via autoinstall &/or ApplicationLauncher EDIT) remain unchanged if dragged from Launcher to plasma panel.

Once launched, the icons shown for the same apps in TaskManager are a mixed bag:  some are the same, some are different, and some are generic.  

This serves as an inconsistent/confusing visual cue to users who know their apps by their defined launcher/panel icons, but are different/unrecognized in the TaskManager.

As long as text-alongside-icons is used in TaskManager, this is confusing/inefficient, but at least identifiable.

If/when icons-only display is used in TaskManager, this will become unmanageable/unusable -- particularly since even the giant-by-default tooltips no longer appear to be working (just noticed that).

Attachment: image of launcher/panel icons defined & used, and 'different'/varied displayed TaskManager icons

Reproducible: Always
Comment 1 pgnet 2015-08-22 18:45:01 UTC
Created attachment 94176 [details]
screenshot of inconsistent icon usage
Comment 2 David Edmundson 2015-08-22 23:29:13 UTC
Seems we have a few causes.

The Breeze icons look different at medium and small which is the reason for the konsole icon changing. We load the appropriate one for the current size.

The panel just happened to be at a size that the launcher gets one and the task manager gets another.

Tagging VDG for comment on handling that one.
Comment 3 Uri Herrera 2015-08-23 21:15:30 UTC
The LibreOffice icon and the FIrefox icons (this one being the Firefox default, by the way) are only downscaled.

I do not know why Thunderbird, Eclipse and YaSt2 are requesting a mimetype icon for their windows.

The Konsole icon is a workaround for a toolbar button in Dolphin, it says so in the index.theme file of the theme, I have commented this in previous reports here and on Github and this won't change until the particular icon that the toolbar button uses changes.
Comment 4 David Edmundson 2015-08-23 21:50:06 UTC
RE:
#16x16 - Fixed size - Application icon(s) for Dolphin sidebar - OPTIONAL + DO_NOT_USE_ANYWHERE_ELSE - Monochrome

We can't assume where it's being used from the size.
Icons in Plasma scale all over the place, and we have user set icons elsewhere. Our icon loader just does generic size matching for the name and the size requested. 

Also, if Dolphin is using the wrong icons; please please file a bug against Dolphin saying what's wrong. Otherwise we end up telling the wrong people, whilst the root cause it blissfully unaware.
Comment 5 pgnet 2015-08-28 18:39:43 UTC
Created attachment 94265 [details]
screenshot of wrong Thunderbird icon even at large scale

When the Panel's scaled to it's "large icon" range, most TaskManager icons switch to that's used/defined in the ApplicationLauncher's Settings' icon pane.

But not all ...

Thunderbird's iccon, e.g., snaps to a generic 'gear' Icon (see attachment, left icon).  No idea where or why it gets that, or why Firefox (next to it) is fine.
Comment 6 Eike Hein 2015-09-02 11:28:40 UTC
*** Bug 352157 has been marked as a duplicate of this bug. ***
Comment 7 d_tassos 2015-09-14 08:16:18 UTC
Created attachment 94555 [details]
Grouped dolphin items don't show folder names
Comment 8 d_tassos 2015-09-14 08:16:48 UTC
Comment on attachment 94555 [details]
Grouped dolphin items don't show folder names

I would like to add another regression to the task manager.

When I click grouped item/icon whatever that might be, eg grouped dolphin folders, the old behavior would be that it would show you the names of the folders that where grouped.

Now it will just show you a folder icon for each folder that has been grouped without any clue which folder is which. Some thing for other grouped items eg chrome. Have attached a couple of pics showing this.
Comment 9 d_tassos 2015-09-14 08:20:29 UTC
Created attachment 94556 [details]
Grouped chrome items don't show window names

As for the dolphin the same thing happens to chrome as well and every other application for that matter that has several windows that have been grouped.

By only having icons it is impossible to separate the various windows/folders/files form each other.
Comment 10 Eike Hein 2015-09-14 13:23:30 UTC
^ This seems to happen uniquely in vertical panels, I can confirm it.
Comment 11 Eike Hein 2015-09-14 18:43:30 UTC
*** Bug 352707 has been marked as a duplicate of this bug. ***
Comment 12 Roberto 2015-09-15 07:40:08 UTC
Created attachment 94573 [details]
wrong icon for intellij idea and mysql workbench
Comment 13 d_tassos 2015-09-16 20:41:58 UTC
(In reply to Eike Hein from comment #10)
> ^ This seems to happen uniquely in vertical panels, I can confirm it.

Funny, never though of checking that out, but indeed, when horizontal the names are showing.

Hopefully it gets fixed though, with most laptops, well any screen for that mater that are all wide screen these days, I try as much as possible to "save" space on top and bottom, since there is so much space on the side of the screens.

That was the reason i moved to KDE basically, because I could not remove the top panel in gnome, at the time I moved to linux.
Comment 14 Eike Hein 2015-09-16 22:01:06 UTC
Yeah, of course it will be.
Comment 15 Eike Hein 2015-09-17 18:00:17 UTC
Git commit c5539a6e59602591d6131ad18de2d744a905a677 by Eike Hein.
Committed on 17/09/2015 at 17:59.
Pushed by hein into branch 'master'.

Further enhance the icon lookup behavior.

This is a follow-up to fbd4a876, which introduced an option to
have running tasks always use the same icon that would be used
for a launcher item. The Task Manager applets subsequently were
updated to default this option to on, addressing frequent user
complaints that Task Manager launchers don't respect their
theming choices (due to window icons overriding the icon theme,
or custom configured icons) or that the icon changes when a
launcher item is replaced by a running task item.

However, for windows that can't be mapped back to an application
known to the menu system, this meant falling back to the MIME
type of the executable, making applications that aren't properly
installed usually end up with application-x-executable or some-
thing else.

This commit changes behavior so that if the launcher URL pro-
duced for a window isn't a valid KService storage id, the window
icon is used again. In turn, since the behavior is now no longer
a trivial yes or no, the option has been dropped from the
library again, making the menu-icon-takes-precedence approach
always-on. In turn, if a launcher item is generated while a
window is around, the icon is taken from the window and stored
persistently. If a launcher is added programmatically using an
URL that can't be mapped to the menu, the icon will be updated
from the window icon at runtime.
CCMAIL:jkt@kde.org

M  +0    -31   libtaskmanager/groupmanager.cpp
M  +0    -8    libtaskmanager/groupmanager.h
M  +23   -33   libtaskmanager/taskitem.cpp
M  +1    -3    libtaskmanager/taskitem.h

http://commits.kde.org/plasma-workspace/c5539a6e59602591d6131ad18de2d744a905a677
Comment 16 Eike Hein 2015-09-21 19:03:48 UTC
Git commit 5d92be223fa5287e6f74dbd6abcbc903c282dfd4 by Eike Hein.
Committed on 21/09/2015 at 19:03.
Pushed by hein into branch 'Plasma/5.4'.

Fix hidden task labels in group popups in vertical orientation.

M  +2    -2    applets/taskmanager/package/contents/ui/Task.qml

http://commits.kde.org/plasma-desktop/5d92be223fa5287e6f74dbd6abcbc903c282dfd4
Comment 17 Zsolt Szakács 2015-10-08 10:46:58 UTC
For me, wrong icons still appear for some specific applications with Plasma 5.4.2.
Comment 18 Eike Hein 2015-10-08 12:03:22 UTC
Can you specify those specific applications?
Comment 19 Zsolt Szakács 2015-10-08 17:39:46 UTC
Pale Moon, VirtualBox, Freeplane, DBGL (DOSBox Game Launcher), and Octopi (only when I right click on its notifier icon and select set sync interval). I can always reproduce the issue with these ones.
Comment 20 Eike Hein 2015-10-08 17:49:13 UTC
Those should be addressed in master (will be 5.5).
Comment 21 Roberto 2015-10-14 20:59:56 UTC
(In reply to Roberto from comment #12)
> Created attachment 94573 [details]
> wrong icon for intellij idea and mysql workbench

The solution in my case was to disable the option 'Use launcher icons for running applications' in the Task Manager Settings
Comment 22 Zsolt Szakács 2015-10-15 10:50:10 UTC
(In reply to Roberto from comment #21)
> (In reply to Roberto from comment #12)
> > Created attachment 94573 [details]
> > wrong icon for intellij idea and mysql workbench
> 
> The solution in my case was to disable the option 'Use launcher icons for
> running applications' in the Task Manager Settings

It solved the issue for me as well. Thank you for sharing!
Comment 23 Fabrizio Ruggeri 2015-11-11 13:17:14 UTC
Solved this issue for me too.
But I don't tink the problem is fixed because without changing the option the icons are wrong
Comment 24 Eike Hein 2015-11-11 13:28:08 UTC
The option no longer exists in the next version and the code changes address this problem.
Comment 25 Fabrizio Ruggeri 2015-11-11 13:29:30 UTC
Sorry, I didn't notice the version.
Perfect!
Comment 26 Fabrizio Ruggeri 2015-11-11 13:29:36 UTC
Sorry, I didn't notice the version.
Perfect!
Comment 27 Eike Hein 2015-11-16 09:59:39 UTC
*** Bug 355401 has been marked as a duplicate of this bug. ***
Comment 28 Don Rhummy 2016-04-26 15:54:48 UTC
I'm still seeing this issue in KDE 5.5.5 (openSUSE LEAP). MySQL Workbench and IntelliJ both show the generic icon. And there's no longer that toggle option in task manager settings.